tests/e2e/condensed_when_nested_path_invalid.error
Error: syntax error in story at line 2, column 40

2|        when tweet track: "storyscript" as tweet
                                             ^^^^^

E0108: Service output `tweet` must be unique. Use `as outputName`
