tests/e2e/condensed_when_nested_path_invalid.story
twitter stream as tweet
    when tweet track: "storyscript" as tweet
        x = 1
